--- a/01_Interfaces/FOPS.Blazor/_Imports.razor
+++ b/01_Interfaces/FOPS.Blazor/_Imports.razor
@@ -11,3 +11,6 @@
 @using FOPS.Blazor.Pages
 @using Microsoft.AspNetCore.Mvc.Razor
 @using FS.DI
+@using FOPS.Application.Fss.Entity
+@using FOPS.Application.Fss
+@using FS.Extends
