--- a/01_Interfaces/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/fss/tasks/FinishList.razor
@@ -165,7 +165,7 @@
         if (PageIndex < 1) PageIndex = 1;
         _lastIndex = PageIndex;
         
-        var page = await _iocManager.Resolve<IFssApi>().GetTaskFinishListAsync(storage,_pageSize, PageIndex);
+        var page = await _iocManager.Resolve<IFssDevice>().GetTaskFinishListAsync(storage.GetFssUrl(),_pageSize, PageIndex);
         _lst = page?.List;
         _totalCount = page.RecordCount;
     }
@@ -179,7 +179,7 @@
             {
                 try
                 {
-                    var page = await _iocManager.Resolve<IFssApi>().GetTaskFinishListAsync(storage,_pageSize, PageIndex);
+                    var page = await _iocManager.Resolve<IFssDevice>().GetTaskFinishListAsync(storage.GetFssUrl(),_pageSize, PageIndex);
                     _lst = page?.List;
                     _totalCount = page.RecordCount;
     // 刷新页面
