--- a/01_Interfaces/FOPS.Blazor/Pages/fss/tasks/List.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/fss/tasks/List.razor
@@ -203,7 +203,7 @@
 
         if (PageIndex < 1) PageIndex = 1;
         _lastIndex = PageIndex;
-        var page = await _iocManager.Resolve<IFssApi>().GetTaskListAsync(storage,GroupId, _pageSize, PageIndex);
+        var page = await _iocManager.Resolve<IFssDevice>().GetTaskListAsync(storage.GetFssUrl(),GroupId, _pageSize, PageIndex);
         _lst = page?.List;
         _totalCount = page.RecordCount;
     }
@@ -218,7 +218,7 @@
                 try
                 {
                     
-                    var page = await _iocManager.Resolve<IFssApi>().GetTaskListAsync(storage,GroupId, _pageSize, PageIndex);
+                    var page = await _iocManager.Resolve<IFssDevice>().GetTaskListAsync(storage.GetFssUrl(),GroupId, _pageSize, PageIndex);
                     _lst = page?.List;
                     _totalCount = page.RecordCount;
     // 刷新页面
@@ -241,7 +241,7 @@
 
     private async Task Cancel(TaskDTO info)
     {
-        await _iocManager.Resolve<IFssApi>().CancelTask(storage,info.TaskGroupId);
+        await _iocManager.Resolve<IFssDevice>().CancelTask(storage.GetFssUrl(),info.TaskGroupId);
     }
 
     public void Dispose()
