--- a/01_Interfaces/FOPS.Blazor/Shared/FssLog.razor
+++ b/01_Interfaces/FOPS.Blazor/Shared/FssLog.razor
@@ -113,7 +113,7 @@
 
     private async Task GetList()
     {
-        var data = await _iocManager.Resolve<IFssApi>().GetRunLogListAsync(storage, null, null, PageSize, 1) ?? new PageList<RunLogDTO>(new(), 0);
+        var data = await _iocManager.Resolve<IFssDevice>().GetRunLogListAsync(storage.GetFssUrl(), null, null, PageSize, 1) ?? new PageList<RunLogDTO>(new(), 0);
         _lst = data.List;
     }
 
