--- a/01_Interfaces/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_Interfaces/FOPS.Blazor/Shared/LeftMenu.razor
@@ -189,13 +189,13 @@
         </dl>
     </li>
     <li data-name="docker" class="layui-nav-item">
-        <a href="javascript:;" lay-tips="镜像" lay-direction="2">
+        <a href="javascript:;" lay-tips="Docker" lay-direction="2">
             <i class="layui-icon layui-icon-template"></i>
-            <cite>容器</cite>
+            <cite>Docker</cite>
         </a>
         <dl class="layui-nav-child">
             <dd>
-                <NavLink href="/docker/tpl/list">模板管理</NavLink>
+                <NavLink href="/docker/tpl/list">Dockerfile模板</NavLink>
             </dd>
             <dd>
                 <NavLink href="/docker/hub/list">仓库管理</NavLink>
