--- a/01_Interfaces/FOPS.Blazor/Pages/project/List.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/project/List.razor
@@ -59,7 +59,7 @@
                             </th>
                             <th data-field="Type">
                                 <div class="layui-table-cell laytable-cell-14-0-2">
-                                    <span>镜像仓库</span>
+                                    <span>Docker仓库</span>
                                 </div>
                             </th>
                             <th data-field="Type">
